[project]
name = "parsing_benchmark"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "rust_pest",
]

[tool.uv.sources]
rust_pest = { workspace = true }

[tool.uv.workspace]
members = ["rust_pest"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "pytest-icdiff>=0.9",
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101"]
