[project]
name = "python-lark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dan Jones", email = "hello@danjones.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "lark>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
