[project]
name = "rust-pest"
version = "0.1.0"
description = "Query parser using Pest and PyO3 bindings."
authors = [
    { name = "Dan Jones", email = "hello@danjones.dev" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
]

[project.scripts]
rust-pest = "rust_pest:main"

[tool.maturin]
module-name = "rust_pest._core"
bindings = "pyo3"
python-packages = ["rust_pest"]
python-source = "python"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
